corrected the spacing

--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,8 @@ li:first-child {
 .hero-left {
   max-width: 328px;
   height: 138px;
+  position: relative;
+  left: 71px;
 }
 
 .hero-left p {
@@ -156,11 +158,13 @@ li:first-child {
   line-height: 26.1px;
   letter-spacing: -0.015em;
   text-align: left;
+  color: #344054;
 }
 
 .hero-left img {
   width: 36px;
   height: 36px;
+  margin-bottom: 14px;
 }
 
 .cta-buttons {
@@ -214,9 +218,30 @@ li:first-child {
 }
 
 .hero-right {
-  width: 169px;
+  width: 207px;
   height: 125px;
   position: relative;
+  right: 71px;
+}
+
+.hero-right .rating {
+  width: 160px;
+  height: 32px;
+  margin-bottom: 21px;
+}
+
+.hero-right .years {
+  width: 169px;
+  height: 47px;
+  font-size: 47px;
+  font-weight: 700;
+  line-height: 47px;
+  letter-spacing: -0.015em;
+  text-align: center;
+}
+
+.hero-right .exp {
+  margin-left: 93px;
 }
 .hero-col {
   display: flex;
@@ -274,8 +299,9 @@ li:first-child {
   justify-content: space-between;
   gap: 455px;
   padding-top: 50px;
-  padding-left: 71px;
   padding-right: 71px;
+  position: relative;
+  left: 71px;
 }
 
 .serv_span {
@@ -296,6 +322,8 @@ li:first-child {
   line-height: 26.1px;
   letter-spacing: -0.015em;
   text-align: left;
+  position: relative;
+  right: 34px;
 }
 
 /* Experience */
@@ -340,6 +368,13 @@ li:first-child {
   height: 400px;
   gap: 48px;
   text-align: left;
+  position: relative;
+  left: 71px;
+}
+
+.exp-col2 {
+  position: relative;
+  right: 71px;
 }
 
 .exp-list {
@@ -361,12 +396,12 @@ li:first-child {
   line-height: 24px;
   letter-spacing: -0.015em;
   text-align: left;
-  columns: #98a2b3;
+  color: #98a2b3;
   margin-top: 14px;
 }
 
 .service-text {
-  margin-bottom: 67px;
+  margin-bottom: 50px;
 }
 
 .service-text2 {
